update mixins and stop hover on mobile device

--- a/src/components/skills.scss
+++ b/src/components/skills.scss
@@ -4,6 +4,7 @@
   h2 {
     font-size: 3.6rem;
     padding: 0 2rem;
+    text-align: center;
   }
 
   .container {
@@ -37,7 +38,7 @@
   padding-right: clamp(2rem, 4vw, 24rem);
   width: 100%;
 
-  @include breakpoint(large) {
+  @include breakpoint(tabletDown) {
     column-gap: 2rem;
   }
 
@@ -55,6 +56,10 @@
 
     &:hover .card-img {
       transform: translateY(-50px);
+
+      @include breakpoint(tabletDown) {
+        transform: none;
+      }
     }
   }
 
@@ -123,17 +128,30 @@
     background: transparent;
     z-index: 1;
     display: flex;
-    gap: 25px;
+    gap: 2.5rem;
+
+    @include breakpoint(tabletDown) {
+      position: absolute;
+      top: 74%;
+      z-index: 3;
+      gap: 15rem;
+    }
+
+    // @supports (gap) {
+    //   display: none;
+    //   // width: 100%;
+    //   // justify-content: space-around;
+    // }
 
     a {
       display: inline-block;
       width: 3rem;
       height: 3rem;
-      scale: 1;
-      transition: scale 0.3s ease-in-out;
+      transform: scale(1);
+      transition: all 0.3s ease-in-out;
 
       &:hover {
-        scale: 1.1;
+        transform: scale(1.1);
       }
     }
 
